完成使用MQ做点赞聚合记录，增加监控